Renamed some classes, added some functionalities, fixed bugs, and updated pom