@@ -1,7 +1,7 @@
 package fr.sekelenao.skcsv;
 
-import fr.sekelenao.skcsv.csv.CsvRow;
-import fr.sekelenao.skcsv.csv.RowConfiguration;
+import fr.sekelenao.skcsv.csv.SkCsvRow;
+import fr.sekelenao.skcsv.csv.CsvConfiguration;
 import fr.sekelenao.skcsv.exception.CsvParsingException;
 import fr.sekelenao.skcsv.exception.InvalidCsvValueException;
 import org.junit.jupiter.api.DisplayName;
@@ -19,10 +19,10 @@ import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-final class CsvRowTest {
+final class SkCsvRowTest {
 
-    private static CsvRow helloWorldRow() {
-        return new CsvRow("Hello", "world", "!");
+    private static SkCsvRow helloWorldRow() {
+        return new SkCsvRow("Hello", "world", "!");
     }
 
     @Nested
@@ -43,15 +43,15 @@ final class CsvRowTest {
         @Test
         @DisplayName("Empty after default constructor")
         void byEmpty() {
-            assertEquals(0, new CsvRow().size());
-            assertEquals("", new CsvRow().toString());
+            assertEquals(0, new SkCsvRow().size());
+            assertEquals("", new SkCsvRow().toString());
         }
 
         @ParameterizedTest
         @ValueSource(ints = {0, 1, 2, 100, 1000, 10000})
         @DisplayName("Constructor by size")
         void bySize(int size) {
-            var row = new CsvRow(size);
+            var row = new SkCsvRow(size);
             assertEquals(size, row.size());
             assertEquals(";".repeat(Math.max(size - 1, 0)), row.toString());
         }
@@ -59,51 +59,49 @@ final class CsvRowTest {
         @Test
         @DisplayName("Constructor by size assertions")
         void bySizeAssertions() {
-            assertThrows(IllegalArgumentException.class, () -> new CsvRow(-1));
+            assertThrows(IllegalArgumentException.class, () -> new SkCsvRow(-1));
         }
 
         @Test
         @DisplayName("VarArgs constructor")
         void byVarArgs() {
             var array = new String[]{"", "Hello", "world", "!", "", ""};
-            var row = new CsvRow(array);
+            var row = new SkCsvRow(array);
             assertAll("Simple operations",
-                    () -> assertEquals(4, new CsvRow("", "Hello", "world", "!").size()),
+                    () -> assertEquals(4, new SkCsvRow("", "Hello", "world", "!").size()),
                     () -> assertEquals(";Hello;world;!;;", row.toString()),
-                    () -> assertEquals(0, new CsvRow(new String[]{}).size()),
-                    () -> assertEquals("", new CsvRow(new String[]{}).toString()),
-                    () -> assertEquals(1, new CsvRow("").size())
+                    () -> assertEquals(0, new SkCsvRow(new String[]{}).size()),
+                    () -> assertEquals("", new SkCsvRow(new String[]{}).toString()),
+                    () -> assertEquals(1, new SkCsvRow("").size())
             );
-            array[0] = "changes";
-            assertEquals(";Hello;world;!;;", row.toString());
         }
 
         @ParameterizedTest
         @MethodSource("wrongArraysProvider")
         @DisplayName("VarArgs constructor null assertions")
         void byVarArgsAssertions(String[] wrongArray) {
-            assertThrows(NullPointerException.class, () -> new CsvRow(wrongArray));
+            assertThrows(NullPointerException.class, () -> new SkCsvRow(wrongArray));
         }
 
         @ParameterizedTest
         @MethodSource("escapeStringsProvider")
         @DisplayName("VarArgs constructor values assertions")
         void byVarArgsValuesAssertions(String wrongString) {
-            assertThrows(InvalidCsvValueException.class, () -> new CsvRow(wrongString));
+            assertThrows(InvalidCsvValueException.class, () -> new SkCsvRow(wrongString));
         }
 
         @Test
         @DisplayName("Iterable constructor")
         void byIterable() {
             var helloWorldList = new ArrayList<>(List.of("", "Hello", "world", "!"));
-            var row = new CsvRow(helloWorldList);
+            var row = new SkCsvRow(helloWorldList);
             assertAll("Simple operations",
                     () -> assertEquals(4, row.size()),
                     () -> assertEquals(";Hello;world;!", row.toString()),
-                    () -> assertEquals(0, new CsvRow(Collections.emptyList()).size()),
-                    () -> assertEquals(1, new CsvRow(List.of("")).size()),
-                    () -> assertEquals("", new CsvRow(List.of("")).toString()),
-                    () -> assertEquals(";", new CsvRow(List.of("", "")).toString())
+                    () -> assertEquals(0, new SkCsvRow(Collections.emptyList()).size()),
+                    () -> assertEquals(1, new SkCsvRow(List.of("")).size()),
+                    () -> assertEquals("", new SkCsvRow(List.of("")).toString()),
+                    () -> assertEquals(";", new SkCsvRow(List.of("", "")).toString())
             );
             helloWorldList.add("test");
             assertEquals(";Hello;world;!", row.toString());
@@ -116,8 +114,8 @@ final class CsvRowTest {
             wrongList.add("wrong");
             wrongList.add(null);
             assertAll("NullPointer assertions",
-                    () -> assertThrows(NullPointerException.class, () -> new CsvRow((List<String>) null)),
-                    () -> assertThrows(NullPointerException.class, () -> new CsvRow(wrongList))
+                    () -> assertThrows(NullPointerException.class, () -> new SkCsvRow((List<String>) null)),
+                    () -> assertThrows(NullPointerException.class, () -> new SkCsvRow(wrongList))
             );
         }
 
@@ -126,79 +124,7 @@ final class CsvRowTest {
         @DisplayName("Iterable constructor values assertions")
         void byIterableAssertions(String wrongString) {
             var lst = List.of(wrongString);
-            assertThrows(InvalidCsvValueException.class, () -> new CsvRow(lst));
-        }
-
-    }
-
-    @Nested
-    final class Configuration {
-
-        static Stream<Character> escapeCharsProvider() {
-            return Stream.of('\n', '\0', '\r', '\b', '\f');
-        }
-
-        static Stream<RowConfiguration> configurationsProvider() {
-            return Stream.of(
-                    new RowConfiguration(',', '\''),
-                    new RowConfiguration(',', '"'),
-                    new RowConfiguration('@', '_'),
-                    new RowConfiguration(' ', '"'),
-                    new RowConfiguration('\t', '"')
-            );
-        }
-
-        @Test
-        @DisplayName("Simples configuration tests")
-        void configureSimple() {
-            var row = new CsvRow("Hello;", "world !");
-            assertEquals("\"Hello;\";world !", row.toString());
-            row.configure(RowConfiguration.SEMICOLON);
-            assertEquals("\"Hello;\";world !", row.toString());
-            row.configure(new RowConfiguration(',', '"'));
-            assertEquals("Hello;,world !", row.toString());
-        }
-
-        @ParameterizedTest
-        @MethodSource("configurationsProvider")
-        @DisplayName("Complex configuration tests")
-        void configureComplex(RowConfiguration config) {
-            var quote = config.quoteAsString();
-            var delimiter = config.delimiterAsString();
-            var row = new CsvRow("Hello;" + delimiter, "world!" + quote).configure(config);
-            var expected = quote + "Hello;" + delimiter + quote + delimiter + quote + "world!" + quote.repeat(3);
-            assertEquals(expected, row.toString());
-        }
-
-        @Test
-        @DisplayName("Configuration null assertions")
-        void configureAssertions() {
-            var emptyRow = new CsvRow();
-            assertThrows(NullPointerException.class, () -> emptyRow.configure(null));
-        }
-
-        @ParameterizedTest
-        @MethodSource("escapeCharsProvider")
-        @DisplayName("Configuration args assertions")
-        void configureAssertions(char wrongChar) {
-            assertAll("escape chars",
-                    () -> assertThrows(InvalidCsvValueException.class, () -> new RowConfiguration(wrongChar, ',')),
-                    () -> assertThrows(InvalidCsvValueException.class, () -> new RowConfiguration(',', wrongChar)),
-                    () -> assertThrows(InvalidCsvValueException.class, () -> new RowConfiguration(wrongChar, wrongChar)),
-                    () -> assertThrows(IllegalArgumentException.class, () -> new RowConfiguration(',', ','))
-            );
-        }
-
-        @Test
-        @DisplayName("Configuration getting is working")
-        void configuration() {
-            var row = new CsvRow();
-            var byTextRow = CsvRow.from("Hello,world,!", RowConfiguration.COMMA);
-            assertAll("Configuration",
-                    () -> assertEquals(RowConfiguration.SEMICOLON, row.configuration()),
-                    () -> assertEquals(RowConfiguration.SEMICOLON, byTextRow.configuration()),
-                    () -> assertEquals(RowConfiguration.COMMA, row.configure(RowConfiguration.COMMA).configuration())
-            );
+            assertThrows(InvalidCsvValueException.class, () -> new SkCsvRow(lst));
         }
 
     }
@@ -214,8 +140,8 @@ final class CsvRowTest {
         @DisplayName("From text with default config")
         void fromText() {
             var text = "\"Hello\"\"\";world;!;\";\";";
-            var row = CsvRow.from(text);
-            var row2 = CsvRow.from(";\"Hello\";world");
+            var row = SkCsvRow.from(text);
+            var row2 = SkCsvRow.from(";\"Hello\";world");
             assertAll("from text default",
                     () -> assertEquals(5, row.size()),
                     () -> assertEquals("Hello\"", row.get(0)),
@@ -234,9 +160,9 @@ final class CsvRowTest {
         @DisplayName("From text complex tests")
         void fromTextComplex() {
             assertAll("From text complex",
-                    () -> assertEquals("", CsvRow.from("\"\"").toString()),
-                    () -> assertEquals("\"", CsvRow.from("\"\"\"\"").getFirst()),
-                    () -> assertEquals(" ; ; ;", CsvRow.from(" ; ; ;").toString())
+                    () -> assertEquals("", SkCsvRow.from("\"\"").toString()),
+                    () -> assertEquals("\"", SkCsvRow.from("\"\"\"\"").getFirst()),
+                    () -> assertEquals(" ; ; ;", SkCsvRow.from(" ; ; ;").toString())
             );
         }
 
@@ -245,17 +171,15 @@ final class CsvRowTest {
         void fromTextWithConfig() {
             var defaultText = "Hello;world;!";
             var customText = "'Hello,',world,'!'''";
-            var config = new RowConfiguration(',', '\'');
-            var defaultRow = CsvRow.from(defaultText, config);
-            var customRow = CsvRow.from(customText, config).configure(config);
+            var config = new CsvConfiguration(',', '\'');
+            var defaultRow = SkCsvRow.from(defaultText, config);
+            var customRow = SkCsvRow.from(customText, config);
             assertAll("from text custom config",
                     () -> assertEquals(1, defaultRow.size()),
                     () -> assertEquals(3, customRow.size()),
                     () -> assertEquals('"' + defaultText + '"', defaultRow.toString()),
                     () -> assertEquals(defaultText, defaultRow.get(0)),
-                    () -> assertEquals(defaultText, defaultRow.configure(config).toString()),
-                    () -> assertEquals(defaultText, defaultRow.configure(config).get(0)),
-                    () -> assertEquals(customText, customRow.toString()),
+                    () -> assertEquals("Hello,;world;!'", customRow.toString()),
                     () -> assertEquals("Hello,", customRow.get(0)),
                     () -> assertEquals("world", customRow.get(1)),
                     () -> assertEquals("!'", customRow.get(2))
@@ -266,33 +190,33 @@ final class CsvRowTest {
         @DisplayName("Null assertions")
         void fromTextNull() {
             assertAll("Null assertions",
-                    () -> assertThrows(NullPointerException.class, () -> CsvRow.from(null)),
+                    () -> assertThrows(NullPointerException.class, () -> SkCsvRow.from(null)),
                     () -> {
-                        var config = new RowConfiguration(' ', '@');
-                        assertThrows(NullPointerException.class, () -> CsvRow.from(null, config));
+                        var config = new CsvConfiguration(' ', '@');
+                        assertThrows(NullPointerException.class, () -> SkCsvRow.from(null, config));
                     },
-                    () -> assertThrows(NullPointerException.class, () -> CsvRow.from("null", null))
+                    () -> assertThrows(NullPointerException.class, () -> SkCsvRow.from("null", null))
             );
         }
 
         @Test
         @DisplayName("From text parsing exceptions")
         void fromTextParsingAssertions() {
-            var config = new RowConfiguration(',', '\'');
+            var config = new CsvConfiguration(',', '\'');
             assertAll("From text default",
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("Hello;\"world\"\";!")),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("Hello;\"world\"!\";!")),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("\"Hello;world!;!")),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("'Hello;world!;!", config)),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("'Hello'';world!;!", config)),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("Hello';'world!;!", config)),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("Hello'';world!;!", config)),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("''';world!;!", config)),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("Hello;world!;!;'", config)),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("'Hello,',world,'!''", config)),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("Hello,world,!''", config)),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("\"")),
-                    () -> assertThrows(CsvParsingException.class, () -> CsvRow.from("\"\"\""))
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("Hello;\"world\"\";!")),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("Hello;\"world\"!\";!")),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("\"Hello;world!;!")),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("'Hello;world!;!", config)),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("'Hello'';world!;!", config)),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("Hello';'world!;!", config)),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("Hello'';world!;!", config)),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("''';world!;!", config)),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("Hello;world!;!;'", config)),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("'Hello,',world,'!''", config)),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("Hello,world,!''", config)),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("\"")),
+                    () -> assertThrows(CsvParsingException.class, () -> SkCsvRow.from("\"\"\""))
             );
         }
 
@@ -300,57 +224,27 @@ final class CsvRowTest {
         @MethodSource("escapeCharsProvider")
         @DisplayName("From text invalid value exception")
         void fromTextValuesAssertions(char wrongChar) {
-            assertThrows(InvalidCsvValueException.class, () -> CsvRow.from("Hello;wo" + wrongChar + "rld;!"));
+            assertThrows(InvalidCsvValueException.class, () -> SkCsvRow.from("Hello;wo" + wrongChar + "rld;!"));
         }
 
     }
 
     @Nested
-    final class Add {
+    @DisplayName("Inserts and append")
+    final class InsertAndAppend {
 
         static Stream<Character> escapeCharsProvider() {
             return Stream.of('\n', '\0', '\r', '\b', '\f');
         }
 
         @Test
-        @DisplayName("Add first")
-        void addFirst() {
-            var row = new CsvRow();
-            row.addFirst("Hello");
-            row.addFirst("world");
-            row.addFirst("!");
-            assertAll("Add first",
-                    () -> assertEquals(3, row.size()),
-                    () -> assertEquals("!;world;Hello", row.toString()),
-                    () -> assertEquals("!", row.get(0)),
-                    () -> assertEquals("world", row.get(1)),
-                    () -> assertEquals("Hello", row.get(2))
-            );
-        }
-
-        @Test
-        @DisplayName("Add first null assertions")
-        void addFirstAssertions() {
-            var emptyRow = new CsvRow();
-            assertThrows(NullPointerException.class, () -> emptyRow.addFirst(null));
-        }
-
-        @ParameterizedTest
-        @MethodSource("escapeCharsProvider")
-        @DisplayName("Add first wrong values assertions")
-        void addFirstWrongValues(char wrongChar) {
-            var emptyRow = new CsvRow();
-            assertThrows(InvalidCsvValueException.class, () -> emptyRow.addFirst("He" + wrongChar + "llo"));
-        }
-
-        @Test
-        @DisplayName("Add last")
-        void addLast() {
-            var row = new CsvRow();
-            row.addLast("Hello");
-            row.addLast("world");
-            row.addLast("!");
-            assertAll("Add last",
+        @DisplayName("Append")
+        void append() {
+            var row = new SkCsvRow();
+            row.append("Hello");
+            row.append("world");
+            row.append("!");
+            assertAll("Append",
                     () -> assertEquals(3, row.size()),
                     () -> assertEquals("Hello;world;!", row.toString()),
                     () -> assertEquals("Hello", row.get(0)),
@@ -360,28 +254,28 @@ final class CsvRowTest {
         }
 
         @Test
-        @DisplayName("Add last null assertions")
-        void addLastAssertions() {
-            var emptyRow = new CsvRow();
-            assertThrows(NullPointerException.class, () -> emptyRow.addLast(null));
+        @DisplayName("Append null assertions")
+        void appendNullAssertions() {
+            var emptyRow = new SkCsvRow();
+            assertThrows(NullPointerException.class, () -> emptyRow.append(null));
         }
 
         @ParameterizedTest
         @MethodSource("escapeCharsProvider")
-        @DisplayName("Add last wrong values assertions")
-        void addLastWrongValues(char wrongChar) {
-            var emptyRow = new CsvRow();
-            assertThrows(InvalidCsvValueException.class, () -> emptyRow.addLast("He" + wrongChar + "llo"));
+        @DisplayName("Append wrong values assertions")
+        void appendWrongValues(char wrongChar) {
+            var emptyRow = new SkCsvRow();
+            assertThrows(InvalidCsvValueException.class, () -> emptyRow.append("He" + wrongChar + "llo"));
         }
 
         @Test
-        @DisplayName("Add")
-        void add() {
-            var row = new CsvRow();
-            row.add(0, "Hello");
-            row.add(0, "world");
-            row.add(1, "!");
-            assertAll("Add",
+        @DisplayName("Insert")
+        void insert() {
+            var row = new SkCsvRow();
+            row.insert(0, "Hello");
+            row.insert(0, "world");
+            row.insert(1, "!");
+            assertAll("Insert",
                     () -> assertEquals(3, row.size()),
                     () -> assertEquals("world;!;Hello", row.toString()),
                     () -> assertEquals("world", row.get(0)),
@@ -391,45 +285,45 @@ final class CsvRowTest {
         }
 
         @Test
-        @DisplayName("Add null assertions")
-        void addNullAssertions() {
-            var emptyRow = new CsvRow();
-            assertThrows(NullPointerException.class, () -> emptyRow.add(0, null));
+        @DisplayName("Insert null assertions")
+        void insertNullAssertions() {
+            var emptyRow = new SkCsvRow();
+            assertThrows(NullPointerException.class, () -> emptyRow.insert(0, null));
         }
 
         @Test
-        @DisplayName("Add indices assertions")
-        void addIndicesAssertions() {
-            var row = new CsvRow();
-            assertAll("Add indices assertions",
-                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.add(-1, "out")),
-                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.add(1, "out"))
+        @DisplayName("Insert indices assertions")
+        void insertIndicesAssertions() {
+            var row = new SkCsvRow();
+            assertAll("Insert indices assertions",
+                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.insert(-1, "out")),
+                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.insert(1, "out"))
             );
-            row.addAll(row.size(), List.of("Hello", "world", "!"));
-            assertAll("Add indices assertions 2",
-                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.add(-1, "out")),
-                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.add(4, "out"))
+            row.insertAll(row.size(), List.of("Hello", "world", "!"));
+            assertAll("Insert indices assertions 2",
+                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.insert(-1, "out")),
+                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.insert(4, "out"))
             );
         }
 
         @ParameterizedTest
         @MethodSource("escapeCharsProvider")
-        @DisplayName("Add wrong values assertions")
-        void addWrongValues(char wrongChar) {
-            var emptyRow = new CsvRow();
-            assertThrows(InvalidCsvValueException.class, () -> emptyRow.add(0, "He" + wrongChar + "llo"));
+        @DisplayName("Insert wrong values assertions")
+        void insertWrongValues(char wrongChar) {
+            var emptyRow = new SkCsvRow();
+            assertThrows(InvalidCsvValueException.class, () -> emptyRow.insert(0, "He" + wrongChar + "llo"));
         }
 
         @Test
-        @DisplayName("Add all at end")
-        void addAllAtEnd() {
+        @DisplayName("Insert all at end")
+        void insertAllAtEnd() {
             var row = helloWorldRow();
-            row.addAll(row.size(), List.of("(", "and Meta-verse", ")"));
+            row.insertAll(row.size(), List.of("(", "and Meta-verse", ")"));
             var row2 = row.copy();
-            row2.addAll(row2.size(), Collections.emptyList());
+            row2.insertAll(row2.size(), Collections.emptyList());
             var row3 = row.copy();
-            row3.addAll(row3.size(), "(", "and Meta-verse", ")");
-            assertAll("Add all at end",
+            row3.insertAll(row3.size(), "(", "and Meta-verse", ")");
+            assertAll("Insert all at end",
                     () -> assertEquals(6, row.size()),
                     () -> assertEquals("Hello;world;!;(;and Meta-verse;)", row.toString()),
                     () -> assertEquals("Hello;world;!;(;and Meta-verse;)", row2.toString()),
@@ -438,13 +332,13 @@ final class CsvRowTest {
         }
 
         @Test
-        @DisplayName("Add all at start")
-        void addAllAtStart() {
+        @DisplayName("Insert all at start")
+        void insertAllAtStart() {
             var row = helloWorldRow();
-            row.addAll(0, List.of("(", "and Meta-verse", ")"));
+            row.insertAll(0, List.of("(", "and Meta-verse", ")"));
             var row2 = helloWorldRow();
-            row2.addAll(0, "(", "and Meta-verse", ")");
-            assertAll("Add all at start",
+            row2.insertAll(0, "(", "and Meta-verse", ")");
+            assertAll("Insert all at start",
                     () -> assertEquals(6, row.size()),
                     () -> assertEquals("(;and Meta-verse;);Hello;world;!", row.toString()),
                     () -> assertEquals(6, row2.size()),
@@ -453,13 +347,13 @@ final class CsvRowTest {
         }
 
         @Test
-        @DisplayName("Add all")
-        void addAll() {
+        @DisplayName("Insert all")
+        void insertAll() {
             var row = helloWorldRow();
-            row.addAll(2, List.of("(", "and Meta-verse", ")"));
+            row.insertAll(2, List.of("(", "and Meta-verse", ")"));
             var row2 = helloWorldRow();
-            row2.addAll(2, "(", "and Meta-verse", ")");
-            assertAll("Add all",
+            row2.insertAll(2, "(", "and Meta-verse", ")");
+            assertAll("Insert all",
                     () -> assertEquals(6, row.size()),
                     () -> assertEquals("Hello;world;(;and Meta-verse;);!", row.toString()),
                     () -> assertEquals(6, row2.size()),
@@ -468,41 +362,41 @@ final class CsvRowTest {
         }
 
         @Test
-        @DisplayName("Add all null assertions")
-        void addAllNullAssertions() {
-            var emptyRow = new CsvRow();
+        @DisplayName("Insert all null assertions")
+        void insertAllNullAssertions() {
+            var emptyRow = new SkCsvRow();
             var lst = Collections.singleton((String) null);
-            assertAll("Add all null",
-                    () -> assertThrows(NullPointerException.class, () -> emptyRow.addAll(0, (Iterable<String>) null)),
-                    () -> assertThrows(NullPointerException.class, () -> emptyRow.addAll(0, (String[]) null)),
-                    () -> assertThrows(NullPointerException.class, () -> emptyRow.addAll(0, lst))
+            assertAll("Insert all null",
+                    () -> assertThrows(NullPointerException.class, () -> emptyRow.insertAll(0, (Iterable<String>) null)),
+                    () -> assertThrows(NullPointerException.class, () -> emptyRow.insertAll(0, (String[]) null)),
+                    () -> assertThrows(NullPointerException.class, () -> emptyRow.insertAll(0, lst))
             );
         }
 
         @ParameterizedTest
         @ValueSource(ints = {-10, -1, 4, 5, 100})
-        @DisplayName("Add all position assertions")
-        void addAllPositionAssertions(int index) {
+        @DisplayName("Insert all position assertions")
+        void insertAllPositionAssertions(int index) {
             var row = helloWorldRow();
             var lst = new ArrayList<String>();
-            assertAll("Add all position assertions",
-                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.addAll(index, lst)),
-                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.addAll(index, ""))
+            assertAll("Insert all position assertions",
+                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.insertAll(index, lst)),
+                    () -> assertThrows(IndexOutOfBoundsException.class, () -> row.insertAll(index, ""))
             );
         }
 
         @ParameterizedTest
         @MethodSource("escapeCharsProvider")
-        @DisplayName("Add all wrong values assertions")
-        void addAllWrongValues(char wrongChar) {
+        @DisplayName("Insert all wrong values assertions")
+        void insertAllWrongValues(char wrongChar) {
             var row = helloWorldRow();
             var lst = Collections.singleton("He" + wrongChar + "llo");
             var array = new String[]{"He" + wrongChar + "llo"};
             for (int i = 0; i < 4; i++) {
                 int finalI = i;
-                assertAll("Add all wrong values",
-                        () -> assertThrows(InvalidCsvValueException.class, () -> row.addAll(finalI, lst)),
-                        () -> assertThrows(InvalidCsvValueException.class, () -> row.addAll(finalI, array))
+                assertAll("Insert all wrong values",
+                        () -> assertThrows(InvalidCsvValueException.class, () -> row.insertAll(finalI, lst)),
+                        () -> assertThrows(InvalidCsvValueException.class, () -> row.insertAll(finalI, array))
                 );
             }
 
@@ -522,7 +416,7 @@ final class CsvRowTest {
         @ValueSource(ints = {0, 1, 2, 3, 4, 5, 6, 7})
         @DisplayName("Set all indices working")
         void setAllIndices(int index) {
-            var row = CsvRow.from("0;1;2;3;4;5;6;7");
+            var row = SkCsvRow.from("0;1;2;3;4;5;6;7");
             assertAll("Set all indices",
                     () -> assertEquals(String.valueOf(index), row.set(index, "replaced")),
                     () -> assertEquals("replaced", row.get(index))
@@ -532,8 +426,8 @@ final class CsvRowTest {
         @Test
         @DisplayName("Set indices assertions")
         void setAllIndicesAssertions() {
-            var emptyRow = new CsvRow();
-            var row = CsvRow.from("0;1;2;3;4;5;6;7");
+            var emptyRow = new SkCsvRow();
+            var row = SkCsvRow.from("0;1;2;3;4;5;6;7");
             assertAll("Set indices assertions",
                     () -> assertThrows(IndexOutOfBoundsException.class, () -> row.set(-1, "wrong")),
                     () -> assertThrows(IndexOutOfBoundsException.class, () -> row.set(8, "wrong")),
@@ -544,7 +438,7 @@ final class CsvRowTest {
         @Test
         @DisplayName("Set null assertions")
         void setNullAssertions() {
-            var row = new CsvRow("One");
+            var row = new SkCsvRow("One");
             assertThrows(NullPointerException.class, () -> row.set(0, null));
         }
 
@@ -552,7 +446,7 @@ final class CsvRowTest {
         @MethodSource("escapeCharsProvider")
         @DisplayName("Set wrong values assertions")
         void setWrongValues(char wrongChar) {
-            var row = new CsvRow("One");
+            var row = new SkCsvRow("One");
             assertThrows(InvalidCsvValueException.class, () -> row.set(0, "He" + wrongChar + "llo"));
         }
 
@@ -565,7 +459,7 @@ final class CsvRowTest {
         @ValueSource(ints = {1, 2, 8, 100, 1000})
         @DisplayName("Fill basic test")
         void fill(int size) {
-            var row = new CsvRow();
+            var row = new SkCsvRow();
             row.fill(size);
             assertAll("Fill",
                     () -> assertEquals(size, row.size()),
@@ -581,7 +475,7 @@ final class CsvRowTest {
         @ValueSource(ints = {-1, -2, -100})
         @DisplayName("Fill assertions")
         void fillAssertions(int size) {
-            var emptyRow = new CsvRow();
+            var emptyRow = new SkCsvRow();
             assertAll("Fill assertions",
                     () -> assertThrows(IllegalArgumentException.class, () -> emptyRow.fill(size))
             );
@@ -596,15 +490,15 @@ final class CsvRowTest {
         @ValueSource(ints = {0, 1, 2, 3, 4, 5, 6, 7})
         @DisplayName("Get all indices working")
         void getAllIndices(int index) {
-            var row = CsvRow.from("0;1;2;3;4;5;6;7");
+            var row = SkCsvRow.from("0;1;2;3;4;5;6;7");
             assertEquals(String.valueOf(index), row.get(index));
         }
 
         @Test
         @DisplayName("Get indices assertions")
         void getAllIndicesAssertions() {
-            var emptyRow = new CsvRow();
-            var row = CsvRow.from("0;1;2;3;4;5;6;7");
+            var emptyRow = new SkCsvRow();
+            var row = SkCsvRow.from("0;1;2;3;4;5;6;7");
             assertAll("Set indices assertions",
                     () -> assertThrows(IndexOutOfBoundsException.class, () -> row.get(-1)),
                     () -> assertThrows(IndexOutOfBoundsException.class, () -> row.get(8)),
@@ -615,7 +509,7 @@ final class CsvRowTest {
         @Test
         @DisplayName("Get first and last")
         void getFirstAndLast() {
-            var row = CsvRow.from("0;1;2;3;4;5;6;7");
+            var row = SkCsvRow.from("0;1;2;3;4;5;6;7");
             assertAll("Get first and last",
                     () -> assertEquals("0", row.getFirst()),
                     () -> assertEquals("7", row.getLast())
@@ -625,7 +519,7 @@ final class CsvRowTest {
         @Test
         @DisplayName("Get indices assertions")
         void getFirstAndLastAssertions() {
-            var emptyRow = new CsvRow();
+            var emptyRow = new SkCsvRow();
             assertAll("Get first and last assertions",
                     () -> assertThrows(NoSuchElementException.class, emptyRow::getFirst),
                     () -> assertThrows(NoSuchElementException.class, emptyRow::getLast)
@@ -641,7 +535,7 @@ final class CsvRowTest {
         @ValueSource(ints = {0, 1, 2})
         @DisplayName("Remove basic tests")
         void remove(int index) {
-            var row = new CsvRow("0", "1", "2");
+            var row = new SkCsvRow("0", "1", "2");
             assertAll("Remove basic tests",
                     () -> assertEquals(String.valueOf(index), row.remove(index)),
                     () -> assertEquals(IntStream.range(0, row.size() + 1)
@@ -680,7 +574,7 @@ final class CsvRowTest {
         @Test
         @DisplayName("RemoveIf basic tests")
         void removeIf() {
-            var row = CsvRow.from("1;2;3;4;5;6;7;8;9;10");
+            var row = SkCsvRow.from("1;2;3;4;5;6;7;8;9;10");
             int expectedSize = row.size() / 2;
             assertAll("RemoveIf basic tests",
                     () -> assertTrue(row.removeIf(s -> (Integer.parseInt(s) & 1) == 0)),
@@ -698,7 +592,7 @@ final class CsvRowTest {
         @Test
         @DisplayName("RemoveIf null assertions")
         void removeIfNullAssertions() {
-            var emptyRow = new CsvRow();
+            var emptyRow = new SkCsvRow();
             assertThrows(NullPointerException.class, () -> emptyRow.removeIf(null));
         }
 
@@ -707,7 +601,7 @@ final class CsvRowTest {
     @Nested
     final class Contains {
 
-        private static final CsvRow row = CsvRow.from("1;3;5;7;9");
+        private static final SkCsvRow row = SkCsvRow.from("1;3;5;7;9");
 
         @ParameterizedTest
         @ValueSource(ints = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9})
@@ -737,7 +631,7 @@ final class CsvRowTest {
         @Test
         @DisplayName("ForEach null assertions")
         void forEachNullAssertions() {
-            var emptyRow = new CsvRow();
+            var emptyRow = new SkCsvRow();
             assertThrows(NullPointerException.class, () -> emptyRow.forEach(null));
         }
 
@@ -746,10 +640,6 @@ final class CsvRowTest {
     @Nested
     @DisplayName("Iterable")
     final class IterableTest {
-
-        static Stream<String> escapeStringsProvider() {
-            return Stream.of("Hello\n", "w\0rld", "I\r", "love\b", "\fJava !");
-        }
 
         @Test
         @DisplayName("For each loop is working")
@@ -768,7 +658,7 @@ final class CsvRowTest {
         void iterator() {
             var row = helloWorldRow();
             var it = row.iterator();
-            var emptyIt = new CsvRow().iterator();
+            var emptyIt = new SkCsvRow().iterator();
             assertAll("Iterator is working",
                     () -> assertTrue(it.hasNext()),
                     () -> assertTrue(it.hasNext()),
@@ -827,163 +717,6 @@ final class CsvRowTest {
             assertThrows(ConcurrentModificationException.class, it::next);
         }
 
-        @Test
-        @DisplayName("List iterator is working")
-        void listIterator() {
-            var row = helloWorldRow();
-            var it = row.listIterator();
-            var emptyIt = new CsvRow().listIterator();
-            assertAll("List iterator is working",
-                    () -> assertEquals(-1, it.previousIndex()),
-                    () -> assertEquals(0, it.nextIndex()),
-                    () -> assertFalse(it.hasPrevious()),
-                    () -> assertFalse(it.hasPrevious()),
-                    () -> assertTrue(it.hasNext()),
-                    () -> assertTrue(it.hasNext()),
-                    () -> {
-                        for (int i = 0; it.hasNext(); i++) {
-                            assertEquals(i, it.nextIndex());
-                            assertEquals(row.get(i), it.next());
-                            assertEquals(i, it.previousIndex());
-                        }
-                    },
-                    () -> assertFalse(it::hasNext),
-                    () -> assertThrows(NoSuchElementException.class, it::next),
-                    () -> assertFalse(emptyIt.hasNext()),
-                    () -> {
-                        for (int i = row.size() - 1; it.hasPrevious(); i--) {
-                            assertEquals(i, it.previousIndex());
-                            assertEquals(row.get(i), it.previous());
-                            assertEquals(i, it.nextIndex());
-                        }
-                    },
-                    () -> assertThrows(NoSuchElementException.class, it::previous)
-            );
-        }
-
-        @Test
-        @DisplayName("List iterator remove")
-        void listIteratorRemove() {
-            var row = helloWorldRow();
-            var it = row.listIterator();
-            assertAll("List iterator remove",
-                    () -> assertThrows(IllegalStateException.class, it::remove),
-                    () -> {
-                        for (int i = 0; it.hasNext(); i++) {
-                            if (i == 1) {
-                                it.remove();
-                                assertThrows(IllegalStateException.class, it::remove);
-                            }
-                            it.next();
-                        }
-                    },
-                    () -> assertEquals(2, row.size()),
-                    () -> assertEquals("world;!", row.toString())
-            );
-        }
-
-        @Test
-        @DisplayName("Iterator for each remaining is working")
-        void listIteratorForEachRemaining() {
-            var lst = new ArrayList<String>();
-            var row = helloWorldRow();
-            var it = row.listIterator();
-            it.next();
-            it.forEachRemaining(lst::add);
-            assertAll("For each remaining working",
-                    () -> assertEquals(2, lst.size()),
-                    () -> assertEquals("world!", String.join("", lst))
-            );
-        }
-
-        @Test
-        @DisplayName("List iterator concurrent modifications")
-        void listIteratorConcurrentModifications() {
-            var row = helloWorldRow();
-            var it = row.listIterator();
-            row.remove(0);
-            assertThrows(ConcurrentModificationException.class, it::next);
-        }
-
-        @Test
-        @DisplayName("List iterator set")
-        void setListIterator() {
-            var row = helloWorldRow();
-            var it = row.listIterator();
-            assertAll("List iterator set",
-                    () -> assertThrows(IllegalStateException.class, () -> it.set("")),
-                    () -> {
-                        for (int i = 0; it.hasNext(); i++) {
-                            if (i == 1) {
-                                it.set("w0rld");
-                                it.set("Hell0");
-                            }
-                            it.next();
-                        }
-                    },
-                    () -> assertEquals(3, row.size()),
-                    () -> assertEquals("Hell0;world;!", row.toString())
-            );
-        }
-
-        @Test
-        @DisplayName("List iterator set null assertions")
-        void listIteratorSetNullAssertions() {
-            var row = helloWorldRow();
-            var it = row.listIterator();
-            it.next();
-            assertThrows(NullPointerException.class, () -> it.set(null));
-        }
-
-        @ParameterizedTest
-        @MethodSource("escapeStringsProvider")
-        @DisplayName("List iterator set value assertions")
-        void listIteratorSetValueAssertions(String wrongString) {
-            var row = helloWorldRow();
-            var it = row.listIterator();
-            it.next();
-            assertThrows(InvalidCsvValueException.class, () -> it.set(wrongString));
-        }
-
-        @Test
-        @DisplayName("List iterator add")
-        void addListIterator() {
-            var row = helloWorldRow();
-            var it = row.listIterator();
-            it.add("beforeAll");
-            assertAll("List iterator add",
-                    () -> {
-                        for (int i = 0; it.hasNext(); i++) {
-                            if (i == 1) {
-                                it.add("1");
-                                it.add("2");
-                            }
-                            it.next();
-                        }
-                        it.add("afterAll");
-                    },
-                    () -> assertEquals(7, row.size()),
-                    () -> assertEquals("beforeAll;Hello;1;2;world;!;afterAll", row.toString())
-            );
-        }
-
-        @Test
-        @DisplayName("List iterator set null assertions")
-        void listIteratorAddNullAssertions() {
-            var row = helloWorldRow();
-            var it = row.listIterator();
-            assertThrows(NullPointerException.class, () -> it.add(null));
-        }
-
-        @ParameterizedTest
-        @MethodSource("escapeStringsProvider")
-        @DisplayName("List iterator set value assertions")
-        void listIteratorAddValueAssertions(String wrongString) {
-            var row = helloWorldRow();
-            var it = row.listIterator();
-            assertThrows(InvalidCsvValueException.class, () -> it.add(wrongString));
-        }
-
     }
 
     @Nested
@@ -994,7 +727,7 @@ final class CsvRowTest {
         @DisplayName("Stream basic tests")
         void stream() {
             var lst = new ArrayList<String>();
-            var emptyRow = new CsvRow();
+            var emptyRow = new SkCsvRow();
             var row = helloWorldRow();
             row.stream().filter(s -> s.length() > 1).forEach(lst::add);
             row.remove(row.size() - 1);
@@ -1031,8 +764,11 @@ final class CsvRowTest {
         @Test
         @DisplayName("Map null assertions")
         void mapAssertions() {
-            var emptyRow = new CsvRow();
-            assertThrows(NullPointerException.class, () -> emptyRow.map(null));
+            var helloWorldRow = helloWorldRow();
+            assertAll("Map null assertions",
+                    () -> assertThrows(NullPointerException.class, () -> helloWorldRow.map(null)),
+                    () -> assertThrows(NullPointerException.class, () -> helloWorldRow.map(s -> null))
+            );
         }
 
         @ParameterizedTest
@@ -1112,22 +848,36 @@ final class CsvRowTest {
         @DisplayName("Escape chars toString")
         void toStringEscapeChars() {
             assertAll("Escape chars assertions",
-                    () -> assertEquals("\\n;", new CsvRow("\\n", "").toString()),
-                    () -> assertEquals("\t;tab", new CsvRow("\t", "tab").toString())
+                    () -> assertEquals("\\n;", new SkCsvRow("\\n", "").toString()),
+                    () -> assertEquals("\t;tab", new SkCsvRow("\t", "tab").toString())
             );
         }
 
         @Test
         @DisplayName("toString basic tests")
         void toStringBasicTests() {
-            var row = new CsvRow("Hello\"", "world", "!", ";", "");
+            var row = new SkCsvRow("Hello\"", "world", "!", ";", "");
             var rowAsString = row.toString();
             assertAll("toString basic tests",
                     () -> assertEquals("\"Hello\"\"\";world;!;\";\";", rowAsString),
-                    () -> assertEquals(row, CsvRow.from("\"Hello\"\"\";world;!;\";\";")),
+                    () -> assertEquals(row, SkCsvRow.from("\"Hello\"\"\";world;!;\";\";")),
                     () -> assertEquals(row.toString(), rowAsString),
-                    () -> assertEquals("\"\"\"\"", CsvRow.from("\"\"\"\"").toString())
+                    () -> assertEquals("\"\"\"\"", SkCsvRow.from("\"\"\"\"").toString())
             );
         }
+
+        @Test
+        @DisplayName("toString with custom config")
+        void toStringWithConfig() {
+            var row = new SkCsvRow("Hello\"", "world", "!", ";", "");
+            var otherRow = new SkCsvRow("Hello'", "world", "!", ",", "'");
+            assertAll("toString custom config",
+                    () -> assertEquals("\"Hello\"\"\";world;!;\";\";", row.toString()),
+                    () -> assertEquals("\"Hello\"\"\",world,!,;,", row.toString(CsvConfiguration.COMMA)),
+                    () -> assertEquals("Hello\",world,!,;,", row.toString(new CsvConfiguration(',', '\''))),
+                    () -> assertEquals("'Hello''',world,!,',',''''", otherRow.toString(new CsvConfiguration(',', '\'')))
+            );
+        }
+
     }
 }
